Deploy staging codeckeck-quarkus